테스트 커밋 / 상품 js 수정

--- a/src/assets/css/_menu.scss
+++ b/src/assets/css/_menu.scss
@@ -230,15 +230,23 @@
 			position: absolute;
 			left: 0;
 			top: 0;
-			width: 100%;
-			height: 100%;
+			width: 85%;
+			height: 85%;
 			border: 1px solid #000;
 			border-radius: 50%;
-			font-size: 6.25vw;
-			letter-spacing: -0.02em;
+			// font-size: 6.25vw;
+			// letter-spacing: -2px;
+			overflow: hidden;
+			word-break: keep-all;
 			&:focus,
 			&:hover {
 				background-color: #fff;
+			}
+			span {
+				// display: block;
+				word-break: keep-all;
+				line-height: 70%;
+				letter-spacing: -5px;
 			}
 		}
 		.menu__size--selected {
