상품상세 수정 중

--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -168,6 +168,7 @@
   }
   .rv__box {
     width: calc(100% - 148px);
+    @include mixins.PtdMedium();
   }
   .rv__prname {
     font-size: 16px;
@@ -189,6 +190,7 @@
     font-size: 24px;
     line-height: 1.3;
     word-break: keep-all;
+    @include mixins.PtdMedium();
   }
   .rv__thumnb {
     position: relative;
@@ -276,6 +278,7 @@
       font-size: 12px;
     }
     .rv__prcode {
+      margin-top: 4px;
       font-size: 10px;
     }
     .rv__text {
@@ -283,8 +286,14 @@
       font-size: 16px;
     }
     .rv__count {
-      font-size: 12px;
+      display: flex;
+      width: 100px;
+      font-size: 16px;
       text-align: right;
+      align-items: inherit;
+      .ic_star {
+        margin-right: 5px;
+      }
     }
     .rv__thumnb {
       width: 110px;
@@ -498,7 +507,7 @@
     margin-bottom: 40px;
     .product__tag--name {
       display: inline;
-      padding: 8px;
+      padding: 6px 8px;
       margin-right: 4px;
       border: 1px solid #000000;
       border-radius: 40px;
@@ -555,6 +564,7 @@
       width: calc(100% - 70px);
       height: 32px;
       line-height: 1.2;
+      @include mixins.PtdMedium();
     }
     .rv__writer {
       font-weight: 500;
@@ -712,30 +722,25 @@
     }
     .product__reivew--title {
       .review__count {
-        .ic_star {}
+        .ic_star {
+          @include mixins.sprite(mo_icons.$ico-star-small);
+        }
       }
     }
     .productReview {
       height: auto;
     }
     .product__reivew--list {
-      // display: flex;
       margin: 10px 0 25px;
-      // overflow-x: scroll;
-		  // -webkit-overflow-scrolling: touch;
       &:after {
         content: '';
         display: block;
         clear: both;
       }
       .rv__item {
-        // flex: none;
-		    // float: left;
-        // width: calc(100% / 1.6) !important;
         padding: 15px 12px;
         border:1px solid #000000;
         border-radius: 15px;
-        // margin-right: 8px;
       }
       .rv__box {
         width: calc(100% - 60px);
@@ -1088,6 +1093,31 @@
 
   }
 }
+
+.membership__benefit {
+  p {
+    display: flex;
+    font-size: 12px;
+    padding: 4px 0;
+    align-items: center;
+  }
+  .btn {
+    margin-left: 10px;
+    padding: 3px 6px;
+    border: 1px solid #000;
+    border-radius: 15px;
+    font-size: 12px;
+  }
+  strong {
+    width: 80px;
+    @include mixins.PtdMedium();
+  }
+  span {
+    display: inline-block;
+    min-width: 75px;
+  }
+}
+
 .product_basketadd {
   .layer__wrap {
     display: flex;
@@ -1170,6 +1200,7 @@
   }
   .rv__box {
     width: calc(100% - 148px);
+    @include mixins.PtdMedium();
   }
   .rv__prname {
     font-size: 16px;
@@ -1409,6 +1440,7 @@
   }
   .rv__box {
     width: calc(100% - 80px);
+    @include mixins.PtdMedium();
   }
   .rv__prname {
     font-size: 20px;
