--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -268,6 +268,7 @@
 		height: 100%;
 		z-index: 5;
 		text-align: center;
+		@include mixins.transform(translate3d(0, 0, 1px));
 		.best-menu__inner {
 			display: flex;
 			flex-direction: column;
@@ -670,9 +671,6 @@
 			width: calc(50% - 12px);
 			margin: 0 0 0 12px;
 		}
-		.menu__round {
-			padding-top: 84.6%;
-		}
 		.menu__info {
 			position: absolute;
 			left: 0;
@@ -760,6 +758,9 @@
 		width: calc(50% - 2px);
 		margin: 2px 0 0 2px;
 	}
+	.menu__round {
+		padding-top: 56.2vw;
+	}
 	.menu__category {
 		display: flex;
 		justify-content: center;
@@ -822,7 +823,7 @@
 			margin: 1px 0 0 0;
 		}
 		.menu__round {
-			padding-top: 112.5%;
+			padding-top: 107.73vw;
 		}
 		.menu__category {
 			border-radius: 32px;
